<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="home">Home</string>
    <string name="news">news</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More apps</string>
    <string name="about">About</string>
    <string name="communicate">Communicate</string>
    <string name="corona_facts">Corona Facts</string>
    <string name="gujaratstate">GujaratState</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="get_notifications">Get Notifications</string>
    <string name="version">Version</string>
    <string name="release_date">Release Date</string>
    <string name="contact_us">Contact Us</string>
    <string name="harsh_ruparelia">Harsh Ruparelia</string>
    <string name="feedback_email">Give Feedback to us so we can be inspired and cross our limits to bring you the best content.</string>
    <string name="licenses">Licenses</string>
    <string name="nointernet">noInternet</string>
    <string name="oh_shucks">Oh! Shucks!</string>
    <string name="slow_net">Slow or no internet connection.\nPlease Check your Internet Setting</string>
    <string name="try_again">Try again</string>
    <string name="corona_virus_update">Corona Virus Update</string>
    <string name="total_case">Total case</string>
    <string name="active_covid_19_cases">Active COVID-19 Cases</string>
    <string name="recovered">Recovered</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_cases_today">New Cases</string>
    <string name="new_deaths">New Deaths</string>
    <string name="server_error">Server Error!!!</string>
    <string name="server_error_dec">Server Not Responding Sorry For Delay</string>
    <string name="no_internet">No connection</string>
    <string name="check_internet">Please check your internet connection and try again</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="life_is_like_a_game_so_play_it_like_a_pro_player">life is like a game so play it like a pro player</string>
    <string name="tap_to_know_more">Tap to know more</string>
    <string name="for_gujarat_state">For Gujarat State</string>
    <string name="swipe_up">Swipe UP</string>
    <string name="setting">Setting</string>
    <string name="who_says">WHO Says</string>
    <string name="earthquakeapp">EarthquakeApp</string>
    <string name="earthquake_data">EarthquakeApp app provides you the real-time data of earthquakes</string>
    <string name="psychology_facts">Psychology Facts</string>
    <string name="get_updates">Get Updates</string>
</resources>
