<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />


    <item android:id="@+id/coronaVirus"
        android:title="@string/who_says"
        android:icon="@drawable/ic_corona_info"
        />


    <item android:id="@+id/updates"
        android:icon="@drawable/ic_technology"
        android:title="@string/get_updates"
        />
</group>

    <item android:title="@string/communicate"
        >
        <menu>
            <item android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings"
                />
            <item android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share"
                />
            <item android:id="@+id/rate"
                android:icon="@drawable/ic_google"
                android:title="@string/rate_us"
                />
            <item android:id="@+id/feedBack"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/feedback"
                />
            <item android:id="@+id/more"
                android:icon="@drawable/ic_search"
                android:title="@string/more_apps"
                />
            <item android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"
                />
        </menu>
    </item>
</menu>