<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backColor"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity"
        android:id="@+id/aboutActivity"
        >
        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            app:cardCornerRadius="7dp"
            android:id="@+id/cardView"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_spread"
                    android:layout_centerInParent="true"

                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="21sp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:id="@+id/appName"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="Covid19 tracker app provides you real-time data of Corona Virus for free"
            android:id="@+id/detailTextView"
            android:textColor="@color/settingColor"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="15sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/aboutBackColor"
            android:layout_below="@id/detailTextView"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:id="@+id/idApp"


            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />
                <View
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:id="@+id/getVersion"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />

                <View
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    android:layout_gravity="end"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02, May 2020"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />


            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idApp"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/detailLinear"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_email_white_24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_map_black_24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vadodara, India"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:id="@+id/komideeLinear"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_dev"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harsh_ruparelia"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/komideeTextView"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:id="@+id/factbookLinear"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_insta"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\@komidee"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:background="@color/aboutBackColor"
            android:layout_below="@id/detailLinear"
            android:id="@+id/relativeLayout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="21sp"
                android:id="@+id/feedbackText"
                android:textColor="@color/textColorEarthquakeLocation"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/feedbackText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_gmail"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_email"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/textColorEarthquakeLocation"
                    />

            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_below="@id/relativeLayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenses"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/licenses"
                android:textColor="@color/textColorEarthquakeLocation"
                />
            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginStart="20dp"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>