<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="17dp"
    android:id="@+id/earthquakeApp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_nature"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor=""
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@drawable/magnitude_circle"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_nature"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earthquakeapp"
            android:layout_weight="1"
            android:id="@+id/locationOffset"
            android:ellipsize="end"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="16sp"
            android:maxLines="1"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/primaryLocation"
            android:text="@string/earthquake_data"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="12sp"
            />
    </LinearLayout>





</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:id="@+id/psychologyApp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_nature"
            app:cardCornerRadius="5dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@drawable/psychology_layout"
                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_psi"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psychology_facts"
                android:layout_weight="1"
                android:id="@+id/locationOffset1"
                android:ellipsize="end"
                android:textColor="@color/textColorEarthquakeLocation"
                android:textSize="16sp"
                android:maxLines="1"
                android:textStyle="bold"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/primaryLocation1"
                android:text="Psychology Facts app provides daily mind-blowing psychology facts"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/textColorEarthquakeLocation"
                android:textSize="12sp"
                />
        </LinearLayout>





    </LinearLayout>

</LinearLayout>