<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_gravity="center"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/coronaColor"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coronaImage"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Psychology Facts"
            android:textSize="21sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:id="@+id/psychologyTextView"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_gujarat_state"
            android:layout_below="@id/psychologyTextView"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-light"
            android:id="@+id/subText"
            android:textStyle="bold"
            android:textSize="16sp"
            android:visibility="gone"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            android:lineSpacingExtra="3dp"
            android:id="@+id/viewpagerText"
            android:gravity="center"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:id="@+id/knowMore"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_alignParentStart="true"
                android:id="@+id/account_name"
                android:layout_centerInParent="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corona_facts"
                android:layout_toEndOf="@id/account_name"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:id="@+id/bottomText"
                android:textColor="@color/textColor"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_share_black_24dp"
                android:layout_centerInParent="true"
                android:id="@+id/share_horizontal"
                android:layout_marginEnd="5dp"
                />

        </RelativeLayout>



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/infoButton"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/keyUp"
            android:visibility="gone"
            />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/swipe_up"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
            android:id="@+id/infoButton"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35dp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="gujCovid-19 Data"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/covidText"
            android:visibility="gone"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>